--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,5 @@
 {
-  "pages": [
+  "pages": ["pages/Mine/my/my",
     "pages/login/login",
     "pages/register/register",
     "pages/resetPwd/resetPwd",
@@ -10,7 +10,7 @@
     "pages/mainPage/finishRun/finishRun",
     "pages/mainPage/faceIden/faceIden",
 
-    "pages/Mine/my/my",
+    
     "pages/Mine/updatePwd/updatePwd",
     "pages/Mine/connectAdm/connectAdm",
     "pages/Mine/announceMent/announceMent",
@@ -29,12 +29,28 @@
     "pages/Teacher/updatePwd"
    
   ],
-  "window": {
-    "backgroundColor": "#F6F6F6",
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
-    "navigationBarTextStyle": "black"
+  "window":{
+    "backgroundTextStyle":"light",
+    "navigationBarBackgroundColor": "#33CCAA",
+    "navigationBarTitleText": "跬步",
+    "navigationBarTextStyle":"black"
+  },
+  "tabBar": {
+    "backgroundColor":"#33CCAA",
+    "list": [
+      {
+        "pagePath": "pages/mainPage/main/main",
+        "text": "首页",
+        "iconPath": "../miniprogram/images/main.png",
+        "selectedIconPath": "../miniprogram/images/main_active.png"
+      },
+      {
+        "pagePath": "pages/Mine/my/my",
+        "text": "我的",
+        "iconPath": "../miniprogram/images/my.png",
+        "selectedIconPath": "../miniprogram/images/my_active.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2"
