--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,5 @@
 {
-  "pages": [
+  "pages": [  "pages/Adminer/adminSel/adminSel",
     "pages/login/login",
     "pages/register/register",
     "pages/resetPwd/resetPwd",
@@ -17,7 +17,7 @@
     "pages/Mine/runHis/runHis",
 
     "pages/Adminer/admin/admin",
-    "pages/Adminer/adminSel/adminSel",
+  
     "pages/Adminer/adminUpdate/adminUpdate",
     "pages/Adminer/adminCanel/adminCanel",
     "pages/Adminer/adminReset/adminReset",
