--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,6 @@
 {
 
-  "pages": [
+  "pages": [   
     "pages/login/login",
     "pages/register/register",
     "pages/resetPwd/resetPwd",
@@ -18,7 +18,7 @@
     "pages/Mine/runHis/runHis",
 
     "pages/Adminer/admin/admin",
-
+    "pages/Adminer/adminUpdate/adminUpdate",
     "pages/Adminer/adminSel/adminSel",
     "pages/Adminer/adminCanel/adminCanel",
     "pages/Adminer/adminReset/adminReset",
