--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,6 @@
 {
 
-  "pages": [   
+  "pages": [   "pages/Teacher/classRate/classRate",
     "pages/login/login",
     "pages/register/register",
     "pages/resetPwd/resetPwd",
@@ -25,7 +25,7 @@
 
     "pages/Teacher/tea/tea",
     "pages/Teacher/publishNotice/publishNotice",
-    "pages/Teacher/classRate/classRate",
+    
     "pages/Teacher/createClass/createClass",
     "pages/Teacher/updatePwd/updatePwd"
    
